@@ -119,6 +119,8 @@ btonline-btechmux 0.6:
           accurate (Power_Shaper)
         * Going reverse while sprinting is now prohibited (Power_Shaper)
         * Hardened Gyros should have the proper crit effect (Power_Shaper)
+	* @pcreate and @robot now show the dbref of the created player
+          or robot (Greg)
 
 	- Merge
 	* Added Exile's roll on back walk code. (Tuncay)
